removed google fonts in index.html

--- a/static/invitation.html
+++ b/static/invitation.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invitation</title>
     <link rel="stylesheet" href="invitation.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
-</head>
+</head> -->
 <body>
     <div class="proposalBox">
         <h1 id="name">Noemi</h1>
