--- a/static/acceptance.html
+++ b/static/acceptance.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Glad You Said Yes!</h1>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, debitis, nisi minima animi cupiditate ratione delectus, excepturi hic eligendi quod vero? Neque iste accusantium ab dolorem eveniet praesentium explicabo a.</p>
 </body>
 
 </html>
