--- a/static/acceptance.html
+++ b/static/acceptance.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noemi Accepted</title>
+    <link rel="stylesheet" href="acceptance.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Glad You Said Yes!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, debitis, nisi minima animi cupiditate ratione delectus, excepturi hic eligendi quod vero? Neque iste accusantium ab dolorem eveniet praesentium explicabo a.</p>
+    <div class="message">
+        <h1>Glad You Said Yes!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, debitis, nisi minima animi cupiditate ratione delectus, excepturi hic eligendi quod vero? Neque iste accusantium ab dolorem eveniet praesentium explicabo a.</p>
+    </div>
+    <div class="scroller" data-speed="fast">
+        <div class="scroller__inner">
+            <img src="/imgs/emiPicOne.jpeg" alt="Noemi" width="200">
+            <img src="/imgs/emiPicTwo.jpeg" alt="Noemi" width="200">
+            <img src="/imgs/emiPicThree.jpeg" alt="Noemi" width="200">
+            <img src="/imgs/emiPicFour.jpeg" alt="Noemi" width="200">
+            <img src="/imgs/emiPicFive.jpeg" alt="Noemi" width="200">
+            <img src="/imgs/emiPicSix.jpeg" alt="Noemi" width="200">
+            <img src="/imgs/emiPicSeven.jpeg" alt="Noemi" width="200">
+
+        </div>
+    </div>
+    <script src="./acceptance.js"></script>
 </body>
 
 </html>
