--- a/static/invitation.html
+++ b/static/invitation.html
@@ -14,9 +14,10 @@
         <h1 id="name">Noemi</h1>
         <h1>Will You Be</h1>
         <h1>My Valentine?</h1>
-
-        <button id="acceptButton">Yes</button>
-        <button id="deniedButton">No</button>
+        <div class="buttonBox">
+            <button id="acceptButton">Yes</button>
+            <button id="deniedButton">No</button>
+        </div>
     </div>
     <script src="./invitation.js"></script>
 </body>
