--- a/static/denied.html
+++ b/static/denied.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noemi Denied</title>
+    <link rel="stylesheet" href="denied.css">
 </head>
 <body>
-    <h1>Sad You Said No</h1>
+    <div class="message">
+        <h1>Go Back and say Yes!</h1>
+        <button id="goBackButton">Go Back</button>
+        <img src="/imgs/emiPicEight.jpeg" alt="Noemi">
+    </div>
+    <script src="./denied.js"></script>
 </body>
 </html>
